src/tests/snapshots/tera__tests__parser__parser_errors@different_end_macro_name.txt.snap
---
source: src/tests/parser.rs
expression: res.unwrap_err()
input_file: src/tests/parser_inputs/errors/different_end_macro_name.txt
---
 Syntax error --> [different_end_macro_name.txt:1:31]
  |
1 | {% macro hello() %}{% endmacro hi %}
  |                                ^---
  = macro was named `hello` in the opening tag, found `hi` as name in the end tag
        
